[package]
name = "hyperrust"
version = "0.0.5"
edition = "2021"
description = "RGB utility for HyperX Alloy Origins 60 keyboard"
license = "MIT"
repository = "https://github.com/EriksRemess/hyperrust"
readme = "Readme.md"
keywords = ["hyperx", "keyboard", "rgb", "cli", "utility"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
hidapi = { version = "2.6.3", features = ["macos-shared-device"] }

[profile.release]
strip = true
lto = true
opt-level = 3
debug = false
