[package]
name = "hyperrust"
version = "0.1.2"
edition = "2021"
description = "RGB utility for HyperX Alloy Origins 60 keyboard"
license = "MIT"
repository = "https://github.com/EriksRemess/hyperrust"
readme = "Readme.md"
keywords = ["hyperx", "keyboard", "rgb", "cli", "utility"]
categories = ["command-line-utilities", "hardware-support"]
include = ["src/**", "themes/**", "Cargo.toml", "Readme.md"]

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
hidapi = { version = "2.6.3", features = ["linux-static-hidraw", "macos-shared-device"], default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[profile.release]
strip = true
lto = true
opt-level = 3
debug = false
panic = "abort"
